# navi-agent

./: .gitignore  app.py  gradio_main.py  main copy.py  main.py  pyproject.toml
src/: config.py
src/agent/: agent.py
src/tools/: compound_interest.py  financial_freedom_calculator.py  home_affordability_calculator.py  loan.py  mortgage.py  options.py  single_stock_and_fixed_savings copy.py  single_stock_and_fixed_savings.py  tool_401k.py  weather_service.py
