[tool.poetry]
name = "qwen-ollama"
version = "0.1.0"
description = ""
authors = ["pastetreee <92103444+pastetreee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.44"
mibian = "^0.1.3"
scipy = "^1.14.1"
langchain-core = "^0.3.15"
lxml = "^5.3.0"
pandas = "^2.2.3"
yfinance = "^0.2.48"
langgraph-cli = "^0.1.52"
streamlit = "^1.39.0"
langchain-groq = "^0.2.1"
python-dotenv = "^1.0.1"
gradio = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
